# Simtool-manage

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.structure/: project.canvas  regentcode.db
.structure/blocks/: access_status.md  agent_population.md  annotation.md  artifact.md  assumption.md  assumption_category.md  assumption_hint.md  assumption_ledger.md  assumption_severity.md  assumption_status.md  assumptions_module.md  boundary_condition.md  build_session.md  cli_main.md  (+118 more)
app/: main.js  package-lock.json  package.json
docs/: ara-deployment.md
frontend/: README.md
simtool/: __init__.py  cli.py  settings.py
tests/: _meta_model_fixtures.py  _metamodel_fixtures.py  test_ara_rendering.py  test_ara_session.py  test_canonical_adversarial.py  test_canonical_idynomics_e2e.py  test_canonical_panel_adjust.py  test_canonical_panel_fit.py  test_canonical_panel_recommend.py  test_canonical_realistic.py  test_canonical_trivial.py  test_comparator.py  test_connector_assumptions.py  test_connector_ir.py  test_connector_ir_invariants.py  test_connector_plugin.py  test_connector_runs.py  test_connector_skill.py  test_extractor.py  test_fetcher.py  test_idynomics_cli.py  test_idynomics_lower.py  test_idynomics_plugin.py  test_integration_meta_panel_connector.py  test_metamodel_ingestion.py  test_metamodel_library.py  test_metamodel_scope.py  test_metamodel_suggestions.py  test_metamodel_versioning.py  test_panel_workflows.py  test_panels.py  test_persistence.py  test_reconciler.py  test_runner_orchestrator.py  test_settings.py  test_units_harmonize.py
(+57 files in other folders)
